# opengl-tutorials

./: .gitignore  CMakeLists.txt  Camera.h  Shader.h  glad.c  main.cpp
include/glad/: glad.h
shaders/: light.frag  shader.frag  shader.fs  shader.vert  shader.vs
